--- a/locale/fr/locale.cfg
+++ b/locale/fr/locale.cfg
@@ -1,6 +1,4 @@
-[item-name]
-=
 [entity-name]
-=
-[virtual-signal-name]
-=
+prototype-Underground_substation=Poste électrique souterrain
+[technology-name]
+tech-Underground_substation=Poste électrique
