--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,6 +1,4 @@
-[item-name]
-=
 [entity-name]
-=
-[virtual-signal-name]
-=
+prototype-Underground_substation=Underground substation
+[technology-name]
+tech-Underground_substation=Underground substation
